--- a/cursos/robotica.html
+++ b/cursos/robotica.html
@@ -102,7 +102,7 @@
 
         <div class="hero-right">
           <div class="hero-image-card">
-            <!-- TROQUE ESSE SRC pela sua imagem do hero -->
+            <!--  imagem do hero -->
             <img src="https://i.ibb.co/RTM4dp6B/roboticapagina.jpg" alt="Alunos montando robôs em sala de aula" />
             <div class="hero-floating-card">
               <div class="floating-icon gradient-circle">🎓</div>
@@ -117,6 +117,247 @@
     </section>
 
     
+    <!-- ================= POR QUE ESCOLHER ================= -->
+    <section class="section why" id="por-que" data-section>
+      <div class="container" data-animate>
+        <h2 class="section-title">
+          Por que Escolher Nosso <span class="gradient-text">Curso?</span>
+        </h2>
+        <p class="section-subtitle">
+          Uma abordagem completa e moderna para você dominar robótica através
+          de projetos práticos, mentoria especializada e uma comunidade ativa.
+        </p>
+
+        <div class="card-grid four">
+          <article class="info-card">
+            <div class="info-icon gradient-box">📖</div>
+            <h3>Teoria e Prática</h3>
+            <p>
+              Aprenda os fundamentos enquanto constrói projetos reais desde a
+              primeira aula.
+            </p>
+          </article>
+
+          <article class="info-card">
+            <div class="info-icon gradient-box">&lt;/&gt;</div>
+            <h3>Programação</h3>
+            <p>
+              Domine Arduino, Python e frameworks modernos de robótica com
+              projetos guiados passo a passo.
+            </p>
+          </article>
+
+          <article class="info-card">
+            <div class="info-icon gradient-box">🔧</div>
+            <h3>Eletrônica</h3>
+            <p>
+              Entenda circuitos, sensores e atuadores trabalhando diretamente
+              com componentes profissionais.
+            </p>
+          </article>
+
+          <article class="info-card">
+            <div class="info-icon gradient-box">👥</div>
+            <h3>Comunidade</h3>
+            <p>
+              Participe de uma comunidade ativa, compartilhe projetos,
+              participe de desafios e eventos exclusivos.
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- ================= CONTEÚDO DO CURSO ================= -->
+    <section class="section content" id="conteudo" data-section>
+      <div class="container content-grid" data-animate>
+        <div class="content-image">
+          <div class="image-card">
+            <!-- TROQUE ESSE SRC pela imagem da parte de conteúdo -->
+            <img src="conteudo-curso.jpg" alt="Braço robótico ao lado de um notebook">
+          </div>
+        </div>
+
+        <div class="content-right">
+          <h2 class="section-title left">
+            Conteúdo do <span class="gradient-text">Curso</span>
+          </h2>
+          <p class="section-subtitle left">
+            12 módulos estruturados com progressão gradual do básico ao
+            avançado. Cada módulo inclui aulas teóricas, práticas e um projeto completo.
+          </p>
+
+          <div class="modules-list">
+            <article class="module-card">
+              <div class="module-number gradient-circle">01</div>
+              <div class="module-body">
+                <h3>Fundamentos de Robótica</h3>
+                <ul>
+                  <li>Introdução à robótica moderna</li>
+                  <li>Componentes e ferramentas essenciais</li>
+                  <li>Primeiro projeto: Robô seguidor de linha</li>
+                </ul>
+              </div>
+            </article>
+
+            <article class="module-card">
+              <div class="module-number gradient-circle">02</div>
+              <div class="module-body">
+                <h3>Programação Arduino</h3>
+                <ul>
+                  <li>Programação C/C++ para microcontroladores</li>
+                  <li>Controle de sensores e atuadores</li>
+                  <li>Projeto: Braço robótico controlado</li>
+                </ul>
+              </div>
+            </article>
+
+            <article class="module-card">
+              <div class="module-number gradient-circle">03</div>
+              <div class="module-body">
+                <h3>Sensores e Percepção</h3>
+                <ul>
+                  <li>Sensores ultrassônicos, infravermelhos e IMU</li>
+                  <li>Processamento de dados dos sensores</li>
+                  <li>Projeto: Robô autônomo com obstáculos</li>
+                </ul>
+              </div>
+            </article>
+
+            <article class="module-card">
+              <div class="module-number gradient-circle">04</div>
+              <div class="module-body">
+                <h3>Robótica Avançada</h3>
+                <ul>
+                  <li>Visão computacional e IA para robôs</li>
+                  <li>Comunicação wireless e IoT</li>
+                  <li>Projeto final: Robô autônomo inteligente</li>
+                </ul>
+              </div>
+            </article>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ================= TUDO QUE VOCÊ PRECISA ================= -->
+    <section class="section features" id="recursos" data-section>
+      <div class="container features-grid" data-animate>
+        <div class="features-left">
+          <h2 class="section-title left">
+            Tudo que <span class="gradient-text">Você Precisa</span>
+          </h2>
+          <p class="section-subtitle left">
+            Uma experiência de aprendizado completa com suporte total para sua
+            jornada na robótica.
+          </p>
+
+          <div class="image-card large">
+            <!-- TROQUE ESSE SRC pela imagem de alunos em grupo -->
+            <img src="tudo-voce-precisa.jpg" alt="Jovens estudando robótica em grupo">
+          </div>
+        </div>
+
+        <div class="features-right">
+          <div class="card-grid two">
+            <article class="info-card">
+              <div class="info-icon soft-yellow">📹</div>
+              <h3>Aulas Online ao Vivo</h3>
+              <p>
+                Participe de aulas interativas com instrutores especializados e
+                tire suas dúvidas em tempo real.
+              </p>
+            </article>
+
+            <article class="info-card">
+              <div class="info-icon soft-yellow">🕒</div>
+              <h3>Acesso Vitalício</h3>
+              <p>
+                Assista quando quiser, quantas vezes precisar. Todo o material
+                fica disponível para sempre.
+              </p>
+            </article>
+
+            <article class="info-card">
+              <div class="info-icon soft-yellow">🏆</div>
+              <h3>Projetos Práticos</h3>
+              <p>
+                8 projetos completos para construir do zero, desde robôs básicos
+                até sistemas autônomos.
+              </p>
+            </article>
+
+            <article class="info-card">
+              <div class="info-icon soft-yellow">🎖️</div>
+              <h3>Certificado Reconhecido</h3>
+              <p>
+                Receba certificado de conclusão reconhecido pelo mercado ao
+                finalizar o curso.
+              </p>
+            </article>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ================= CTA FINAL ================= -->
+    <section class="section cta" id="cta" data-section>
+      <div class="container cta-inner" data-animate>
+        <div class="pill-badge center">
+          <span class="pill-icon">⚡</span>
+          <span>Vagas limitadas para próxima turma</span>
+        </div>
+
+        <h2 class="cta-title">
+          Pronto para Construir Seu<br />
+          <span class="gradient-text">Primeiro Robô?</span>
+        </h2>
+
+        <p class="section-subtitle narrow">
+          Comece hoje sua jornada na robótica e transforme ideias em projetos
+          reais. Junte-se a centenas de alunos que já estão construindo o futuro.
+        </p>
+
+        <div class="hero-actions center">
+          <!-- COLOQUE AQUI SEU WHATSAPP ou LINK DE PAGAMENTO -->
+          <a href="#"
+             class="btn btn-primary"
+             id="btnInscricao">
+            Inscrever-se Agora
+            <span class="btn-arrow">➜</span>
+          </a>
+          <a href="#"
+             class="btn btn-ghost"
+             id="btnConsultor">
+            Falar com Consultor
+          </a>
+        </div>
+
+        <div class="cta-footer">
+          <span class="lock-icon">🔒</span>
+          <span>Garantia de 7 dias • Suporte dedicado • Certificado reconhecido</span>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- BOTÃO VOLTAR AO TOPO -->
+  <button class="scroll-top" type="button" data-scroll-top aria-label="Voltar ao topo">
+    ↑
+  </button>
+
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <span>© <span id="year"></span> Robótica Pro. Todos os direitos reservados.</span>
+      <div class="footer-links">
+        <a href="#por-que">Sobre o Curso</a>
+        <a href="#conteudo">Conteúdo</a>
+        <a href="#recursos">Recursos</a>
+      </div>
+    </div>
+  </footer>
+
 
 
   <script src="../assets/componentes/robotica.js"></script>
